--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progate</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="assets/responsive.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="responsive.css">
     <link rel="shortcut icon" href="favicon.ico" >
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <img src="img/main_logo.png" alt="">
+        <img src="main_logo.png" alt="">
       </div>
       <div class="sp-menu">
         <span class="fa fa-bars menu-icon"></span>
@@ -56,28 +56,28 @@
     <div class="lessons">
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/html.png" alt="">
+          <img src="html.png" alt="">
           <p>HTML & CSS</p>
         </div>
         <p class="text-content">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/jQuery.png" alt="">
+          <img src="jQuery.png" alt="">
           <p>jQuery</p>
         </div>
         <p class="text-content">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/ruby.png" alt="">
+          <img src="ruby.png" alt="">
           <p>Ruby</p>
         </div>
         <p class="text-content">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/php.png" alt="">
+          <img src="php.png" alt="">
           <p>PHP</p>
         </div>
         <p class="text-content">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
@@ -95,12 +95,12 @@
   </div>
   <footer>
     <div class="container">
-    <img src="img/footer_logo.png" alt="">
+    <img src="footer_logo.png" alt="">
     <p>Learn to Code, Learn to be Creative.</p>
     </div>
   </footer>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script type="text/javascript" src="assets/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
