--- a/index.html
+++ b/index.html
@@ -6,34 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progate</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="assets/responsive.css">
     <link rel="shortcut icon" href="favicon.ico" >
 </head>
 <body>
   <header>
     <div class="container">
-      <div class="header-left">
-        <img src="main_logo.png" alt="">
+      <div class="header-left" id="page-top">
+        <img src="img/main_logo.png" alt="">
       </div>
-      <div class="sp-menu">
+      <div class="sp-menu" id="on-off">
         <span class="fa fa-bars menu-icon"></span>
       </div>
       <div class="header-right">
-        <div class="btn-header">レッスン</div>
-        <div class="btn-header">新規登録</div>
+        <a href="#anchor-lesson" class="btn-header btn-lesson">レッスン</a>
+        <div class="btn-header modal-show-signin">新規登録</div>
         <div class="btn-header" id="modal-show-login">ログイン</div>
       </div>
     </div>
   </header>
+  <div id="sp-btn">
+    <a href="#anchor-lesson" class="btn-header_sp btn-lesson" >レッスン</a>
+    <div class="btn-header_sp modal-show-signin">新規登録</div>
+    <div class="btn-header_sp modal-show-login">ログイン</div>
+  </div>
   <div id="modal-wrapper">
     <div id="modal-login">
-      <p>E-Mailで新規登録</p>
+      <div class="modal-close">
+        <span class="fa fa-2x fa-times"></span>
+      </div>
+      <p>E-Mailでログイン</p>
       <input class="textbox" type="text" name="" placeholder="メールアドレス">
       <input class="textbox" type="text" name="" placeholder="パスワード">
       <a class="btn signin modal-btn" href="#">ログイン</a>
     </div>
   </div>
+
+  <div id="modal-wrapper-sign">
+    <div id="modal-signin">
+      <div class="modal-close">
+        <span class="fa fa-2x fa-times"></span>
+      </div>
+      <p>E-Mailで新規登録</p>
+      <input class="textbox" type="text" name="" placeholder="メールアドレス">
+      <input class="textbox" type="text" name="" placeholder="パスワード">
+      <a class="btn signin modal-btn" href="#">サインイン</a>
+    </div>
+  </div>
+
 
   <div class="top-wrapper">
     <div class="container">
@@ -43,41 +64,41 @@
       <p>Progateはオンラインプログラミング学習サービスです。<br>
         初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
-        <a class="btn signin" href="#">新規登録はこちら</a>
+        <a class="btn signin modal-show-signin" href="#">新規登録はこちら</a>
         <p>or</p>
         <a class="btn fb" href="#"><span class="fa fa-facebook"></span>Facebookで登録</a>
         <a class="btn tw" href="#"><span class="fa fa-twitter"></span>Twitterで登録</a>
       </div>
     </div>
   </div>
-  <div class="lesson-wrapper">
+  <div class="lesson-wrapper" id="anchor-lesson">
     <div class="container">
     <h2>Learn Where to Get Started!</h2>
     <div class="lessons">
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="html.png" alt="">
+          <img src="img/html.png" alt="">
           <p>HTML & CSS</p>
         </div>
         <p class="text-content">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="jQuery.png" alt="">
+          <img src="img/jQuery.png" alt="">
           <p>jQuery</p>
         </div>
         <p class="text-content">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="ruby.png" alt="">
+          <img src="img/ruby.png" alt="">
           <p>Ruby</p>
         </div>
         <p class="text-content">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="php.png" alt="">
+          <img src="img/php.png" alt="">
           <p>PHP</p>
         </div>
         <p class="text-content">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
@@ -90,17 +111,17 @@
     <div class="container">
     <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
     <h3>Let's learn to code, learn to be creative!</h3>
-    <span class="btn message">さっそく開発する</span>
+    <span class="btn message modal-show-signin">さっそく開発する</span>
     </div>
   </div>
   <footer>
     <div class="container">
-    <img src="footer_logo.png" alt="">
+    <img src="img/footer_logo.png" alt="">
     <p>Learn to Code, Learn to be Creative.</p>
     </div>
   </footer>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="assets/script.js"></script>
 </body>
 
 </html>
