--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="header-right">
         <a href="#anchor-lesson" class="btn-header btn-lesson">レッスン</a>
         <div class="btn-header modal-show-signin">新規登録</div>
-        <div class="btn-header" id="modal-show-login">ログイン</div>
+        <div class="btn-header modal-show-login">ログイン</div>
       </div>
     </div>
   </header>
