--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div class="header-left" id="page-top">
-        <img src="img/main_logo.png" alt="">
+        <img src="main_logo.png" alt="">
       </div>
       <div class="sp-menu" id="on-off">
         <span class="fa fa-bars menu-icon"></span>
@@ -77,28 +77,28 @@
     <div class="lessons">
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/html.png" alt="">
+          <img src="html.png" alt="">
           <p>HTML & CSS</p>
         </div>
         <p class="text-content">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/jQuery.png" alt="">
+          <img src="jQuery.png" alt="">
           <p>jQuery</p>
         </div>
         <p class="text-content">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/ruby.png" alt="">
+          <img src="ruby.png" alt="">
           <p>Ruby</p>
         </div>
         <p class="text-content">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
       </div>
       <div class="lesson">
         <div class="lesson-icon">
-          <img src="img/php.png" alt="">
+          <img src="php.png" alt="">
           <p>PHP</p>
         </div>
         <p class="text-content">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
@@ -116,7 +116,7 @@
   </div>
   <footer>
     <div class="container">
-    <img src="img/footer_logo.png" alt="">
+    <img src="footer_logo.png" alt="">
     <p>Learn to Code, Learn to be Creative.</p>
     </div>
   </footer>
